--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -97,7 +97,7 @@
             android:layout_height="@dimen/start_btn_height"
             android:layout_marginTop="16dp"
             android:background="@drawable/bg_btn"
-            android:text="干货列表" />
+            android:text="Retrofit2加载干货列表" />
         <Button
             android:id="@+id/btn_screen_rotation"
             android:layout_width="@dimen/start_btn_width"
