add scroller learning

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,6 +24,10 @@
         android:text="connect to server by aidl !"
         android:layout_margin="10dp"/>
 
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"/>
     <Button
         android:id="@+id/btn_send_socket"
         android:layout_width="wrap_content"
