--- a/app/src/main/res/drawable/bg_btn_pressed.xml
+++ b/app/src/main/res/drawable/bg_btn_pressed.xml
@@ -2,5 +2,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <corners android:radius="4dp"/>
-    <solid android:color="#99FFC0CB"/>
+    <solid android:color="@color/light_grey_ccc" />
+    <stroke android:color="@color/colorPrimary" android:width="2dp"/>
 </shape>
