--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,6 +9,8 @@
     <color name="transparent">#00000000</color>
     <color name="black">#000000</color>
     <color name="white">#ffffff</color>
+    <color name="light_grey_ccc">#cccccc</color>
+    <color name="home_red">#eb4f38</color>
     <color name="grey">#3c3c3c</color>
 
 </resources>
