--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,6 @@
 
     <dimen name="start_btn_width">240dp</dimen>
     <dimen name="start_btn_height">40dp</dimen>
+
+    <dimen name="navigation_height">50dp</dimen>
 </resources>
